--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,7 +6,7 @@
 body {
     background-color: #f6f8fc;
 }
-
+/* 
 .content {
     width: 100vw;
     height: 100vh;
@@ -21,4 +21,4 @@ body {
         margin: 1rem auto;
         border-radius: 1rem;
     }
-}
+} */
